Remove Simple Thermal

--- a/arch/arm64/configs/d8g_defconfig
+++ b/arch/arm64/configs/d8g_defconfig
@@ -5465,7 +5465,7 @@ CONFIG_HALLS=y
 CONFIG_FINGERPRINT_SYNAPTICS4302=y
 
 # Simple Thermal
-CONFIG_MSM_THERMAL_SIMPLE=y
+#  CONFIG_MSM_THERMAL_SIMPLE is not set
 
 #
 # Simple LMK
