--- a/arch/arm64/configs/d8g_defconfig
+++ b/arch/arm64/configs/d8g_defconfig
@@ -240,7 +240,7 @@ CONFIG_JUMP_LABEL=y
 # CONFIG_UPROBES is not set
 # CONFIG_HAVE_64BIT_ALIGNED_ACCESS is not set
 CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
-CONFIG_HAVE_KPROBES=y
+# CONFIG_HAVE_KPROBES is not set
 CONFIG_HAVE_KRETPROBES=y
 CONFIG_HAVE_ARCH_TRACEHOOK=y
 CONFIG_HAVE_DMA_CONTIGUOUS=y
@@ -5465,7 +5465,7 @@ CONFIG_HALLS=y
 CONFIG_FINGERPRINT_SYNAPTICS4302=y
 
 # Simple Thermal
-#  CONFIG_MSM_THERMAL_SIMPLE is not set
+CONFIG_MSM_THERMAL_SIMPLE=y
 
 #
 # Simple LMK
