--- a/arch/arm64/configs/d8g_defconfig
+++ b/arch/arm64/configs/d8g_defconfig
@@ -490,7 +490,8 @@ CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
 CONFIG_NR_CPUS=8
 CONFIG_LITTLE_CPU_MASK=15
-CONFIG_BIG_CPU_MASK=128
+CONFIG_BIG_CPU_MASK=112
+CONFIG_PRIME_CPU_MASK=128
 CONFIG_HOTPLUG_CPU=y
 CONFIG_ARCH_NR_GPIO=1280
 # CONFIG_NUMA is not set
@@ -5509,3 +5510,9 @@ CONFIG_DYNAMIC_TUNNING_SWAPPINESS=y
 CONFIG_OPLUS_KEVENT_UPLOAD=y
 CONFIG_OPLUS_FEATURE_MM_FEEDBACK=y
 CONFIG_OPLUS_FEATURE_FEEDBACK=y
+
+#
+# KernelSU
+#
+CONFIG_KSU=y
+# CONFIG_KSU_SUSFS is not set 
